--- a/quiz.html
+++ b/quiz.html
@@ -5,58 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblical Quiz</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f0f0f0; color: #333; }
-        .container { width: 80%; margin: auto; max-width: 600px; }
+        body { font-family: Arial, sans-serif; background-color: #f0f0f0; color: #333; margin: 0; padding: 0; }
+        .container { width: 90%; margin: auto; max-width: 600px; padding: 20px; }
         h1 { text-align: center; }
         .question { margin: 20px 0; }
         .answer { margin: 10px 0; }
-        button { padding: 10px 20px; }
+        button { padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        button:disabled { background-color: #6c757d; }
+        #result { margin-top: 20px; }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Biblical Quiz</h1>
         <div id="quiz"></div>
-        <button id="submit">Submit</button>
+        <button id="next" disabled>Next Question</button>
         <div id="result"></div>
     </div>
     <script>
-        const questions = []; // Esto se llenará con el contenido del archivo JSON.
+        const questions = [];
+        let currentQuestionIndex = 0;
 
-        fetch('https://raw.githubusercontent.com/BIBLIASYESTUDIOS/jsonbiblequiz/refs/heads/main/quiz.json')
+        fetch('URL_DE_TU_JSON_EN_GITHUB')
             .then(response => response.json())
             .then(data => {
                 questions.push(...data);
-                loadQuiz();
+                loadQuestion();
             });
 
-        function loadQuiz() {
+        function loadQuestion() {
             const quizContainer = document.getElementById('quiz');
-            questions.forEach((question, index) => {
+            quizContainer.innerHTML = '';
+
+            if (currentQuestionIndex < questions.length) {
+                const question = questions[currentQuestionIndex];
                 const questionDiv = document.createElement('div');
                 questionDiv.classList.add('question');
-                questionDiv.innerHTML = `<h3>${index + 1}. ${question.question}</h3>`;
+                questionDiv.innerHTML = `<h3>${currentQuestionIndex + 1}. ${question.question}</h3>`;
                 
-                question.answers.forEach((answer, i) => {
+                question.answers.forEach(answer => {
                     questionDiv.innerHTML += `
                         <div class="answer">
-                            <input type="radio" name="question${index}" value="${answer}">
-                            ${answer}
+                            <input type="radio" name="answer" value="${answer}" id="${answer}">
+                            <label for="${answer}">${answer}</label>
                         </div>`;
                 });
                 quizContainer.appendChild(questionDiv);
-            });
+                document.getElementById('result').innerText = '';
+                document.getElementById('next').disabled = true;
+            } else {
+                document.getElementById('quiz').innerHTML = '<h3>Quiz Completed!</h3>';
+                document.getElementById('next').style.display = 'none';
+            }
         }
 
-        document.getElementById('submit').addEventListener('click', () => {
-            let score = 0;
-            questions.forEach((question, index) => {
-                const selected = document.querySelector(`input[name="question${index}"]:checked`);
-                if (selected && selected.value === question.correctAnswer) {
-                    score++;
+        document.getElementById('next').addEventListener('click', () => {
+            const selected = document.querySelector('input[name="answer"]:checked');
+            const resultDiv = document.getElementById('result');
+
+            if (selected) {
+                const answer = selected.value;
+                const correctAnswer = questions[currentQuestionIndex].correctAnswer;
+
+                if (answer === correctAnswer) {
+                    resultDiv.innerText = `Correct! The answer is: ${correctAnswer}`;
+                } else {
+                    resultDiv.innerText = `Wrong! The correct answer is: ${correctAnswer}`;
                 }
-            });
-            document.getElementById('result').innerText = `You scored ${score} out of ${questions.length}.`;
+
+                currentQuestionIndex++;
+                document.getElementById('next').disabled = false;
+
+                if (currentQuestionIndex < questions.length) {
+                    document.getElementById('next').innerText = 'Next Question';
+                } else {
+                    document.getElementById('next').innerText = 'Finish Quiz';
+                }
+            } else {
+                resultDiv.innerText = 'Please select an answer before proceeding.';
+            }
         });
     </script>
 </body>
